Added who command support

--- a/logger.conf
+++ b/logger.conf
@@ -33,12 +33,14 @@ args=(sys.stdout,)
 class=FileHandler
 level=INFO
 formatter=simpleFormatter
+encoding=utf-8
 args=('client.log', 'a')
 
 [handler_serverFileHandler]
 class=FileHandler
 level=INFO
 formatter=simpleFormatter
+encoding=utf-8
 args=('server.log', 'a')
 
 [formatter_simpleFormatter]
